Update friend request API with JWT
